卡片分布算法：长段落段内插卡，修复满屏正文没有代码块
- 跨越字数阈值的长段落从句末标点处切开插卡（一段可连续多刀），
  卡片间隔不再被整段长度撑大；极端样本（2000 字一段）的最大间隔
  从 1016 字降到 334 字
- 修复段内切点相对/绝对偏移混淆（连续多刀时越切越靠前）
- shell 块与段内插卡同段落互斥、卡片优先，避免长段被 shell 独占
- 新增 CardGapCheck 自测（间隔有界 + 同 seed 确定性）；UiPreview
  支持第 4 参数传本地 txt 样本渲染 -file.png